--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="liberty_compass">
+  <meta name="apple-mobile-web-app-title" content="Liberty Compass">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -31,6 +31,11 @@
 
   <title>liberty_compass</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    html, body {
+      background-color: #262A35;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
 </head>
 <body>
