--- a/index.html
+++ b/index.html
@@ -33,12 +33,29 @@
   <link rel="manifest" href="manifest.json">
   <style>
     html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
       background-color: #262A35;
+    }
+    #loading {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+      font-size: 20px;
+      color: white;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
 </head>
 <body>
+  <section id="loading">
+    Loading...
+  </section>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
